[gd_scene load_steps=36 format=3 uid="uid://bw30v3e17i10m"]

[ext_resource type="Script" path="res://Scripts/Skills/desert_killer.gd" id="1_05uxk"]
[ext_resource type="Texture2D" uid="uid://c5h0y0tqo7khf" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_00.png" id="1_j4gs6"]
[ext_resource type="Texture2D" uid="uid://sdge6xaebm5m" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_01.png" id="2_mwrmo"]
[ext_resource type="Texture2D" uid="uid://cvoh4uy6lnrwl" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_02.png" id="3_tnv3n"]
[ext_resource type="Texture2D" uid="uid://cpk4fij7daq2n" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_03.png" id="4_bp6ee"]
[ext_resource type="Texture2D" uid="uid://cfrn4eiesnr3a" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_04.png" id="5_hr4ne"]
[ext_resource type="Texture2D" uid="uid://bkc7ke4s53qdx" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_05.png" id="6_jxoxl"]
[ext_resource type="Texture2D" uid="uid://dbt8ido7d0iov" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_06.png" id="7_pp3ke"]
[ext_resource type="Texture2D" uid="uid://bpikiqqwvktuc" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_07.png" id="8_fmbj5"]
[ext_resource type="Texture2D" uid="uid://q6tq3fb6dehm" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_08.png" id="9_cu0kh"]
[ext_resource type="Texture2D" uid="uid://c1yfvfbk1rjrt" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_09.png" id="10_wxb1h"]
[ext_resource type="Texture2D" uid="uid://d4m402t6adjix" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_10.png" id="11_klajj"]
[ext_resource type="Texture2D" uid="uid://617hetbbvidp" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_11.png" id="12_rffyk"]
[ext_resource type="Texture2D" uid="uid://n2bey57yj6cv" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_12.png" id="13_71iir"]
[ext_resource type="Texture2D" uid="uid://uowpyen7p7gu" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_13.png" id="14_dbva6"]
[ext_resource type="Texture2D" uid="uid://dp8b6iimuxu7u" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_14.png" id="15_gvrec"]
[ext_resource type="Texture2D" uid="uid://b37swaeq7oq2o" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_15.png" id="16_kityc"]
[ext_resource type="Texture2D" uid="uid://1poukqvv1cnn" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_16.png" id="17_f2ox5"]
[ext_resource type="Texture2D" uid="uid://nbqnjc6b1qx7" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_17.png" id="18_ctvjo"]
[ext_resource type="Texture2D" uid="uid://cgrip1v6d54p8" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_18.png" id="19_qq8nm"]
[ext_resource type="Texture2D" uid="uid://4vt4lb14no3r" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_19.png" id="20_ep05c"]
[ext_resource type="Texture2D" uid="uid://njsqfc8tawub" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_20.png" id="21_it6cv"]
[ext_resource type="Texture2D" uid="uid://cou660rifss0j" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_21.png" id="22_kiemx"]
[ext_resource type="Texture2D" uid="uid://dqs8uxmkcl2ju" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_22.png" id="23_e22y5"]
[ext_resource type="Texture2D" uid="uid://c74ln3dlt61kt" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_23.png" id="24_bt76i"]
[ext_resource type="Texture2D" uid="uid://ds66ua4jdt6os" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_24.png" id="25_e3gt8"]
[ext_resource type="Texture2D" uid="uid://cfppr1ph1ahle" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_25.png" id="26_ayb4f"]
[ext_resource type="Texture2D" uid="uid://b5nl6nb3u3u0d" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_26.png" id="27_ypu0m"]
[ext_resource type="Texture2D" uid="uid://j7clmxuthikx" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_27.png" id="28_qdx71"]
[ext_resource type="Texture2D" uid="uid://bhu351eojsb48" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_28.png" id="29_t2wgn"]
[ext_resource type="Texture2D" uid="uid://qhldmph23a6w" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_29.png" id="30_6i383"]
[ext_resource type="Texture2D" uid="uid://c17mbykfr1pk7" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_30.png" id="31_uw5q0"]
[ext_resource type="Texture2D" uid="uid://d0klm0e8trxuq" path="res://Assets/Animations/Archers/LV4-2/LV4-2-kill_31.png" id="32_pffwl"]
[ext_resource type="AudioStream" uid="uid://d4ck1unsv2rkb" path="res://Assets/Sounds/FXs/DefenceTowers/DesertSentryTower/刺杀.wav" id="34_ywhb2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2powr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_j4gs6")
}, {
"duration": 1.0,
"texture": ExtResource("2_mwrmo")
}, {
"duration": 1.0,
"texture": ExtResource("3_tnv3n")
}, {
"duration": 1.0,
"texture": ExtResource("4_bp6ee")
}, {
"duration": 1.0,
"texture": ExtResource("5_hr4ne")
}, {
"duration": 1.0,
"texture": ExtResource("6_jxoxl")
}, {
"duration": 1.0,
"texture": ExtResource("7_pp3ke")
}, {
"duration": 1.0,
"texture": ExtResource("8_fmbj5")
}, {
"duration": 1.0,
"texture": ExtResource("9_cu0kh")
}, {
"duration": 1.0,
"texture": ExtResource("10_wxb1h")
}, {
"duration": 1.0,
"texture": ExtResource("11_klajj")
}, {
"duration": 1.0,
"texture": ExtResource("12_rffyk")
}, {
"duration": 1.0,
"texture": ExtResource("13_71iir")
}, {
"duration": 1.0,
"texture": ExtResource("14_dbva6")
}, {
"duration": 1.0,
"texture": ExtResource("15_gvrec")
}, {
"duration": 1.0,
"texture": ExtResource("16_kityc")
}, {
"duration": 1.0,
"texture": ExtResource("17_f2ox5")
}, {
"duration": 1.0,
"texture": ExtResource("18_ctvjo")
}, {
"duration": 1.0,
"texture": ExtResource("19_qq8nm")
}, {
"duration": 1.0,
"texture": ExtResource("20_ep05c")
}, {
"duration": 1.0,
"texture": ExtResource("21_it6cv")
}, {
"duration": 1.0,
"texture": ExtResource("22_kiemx")
}, {
"duration": 1.0,
"texture": ExtResource("23_e22y5")
}, {
"duration": 1.0,
"texture": ExtResource("24_bt76i")
}, {
"duration": 1.0,
"texture": ExtResource("25_e3gt8")
}, {
"duration": 1.0,
"texture": ExtResource("26_ayb4f")
}, {
"duration": 1.0,
"texture": ExtResource("27_ypu0m")
}, {
"duration": 1.0,
"texture": ExtResource("28_qdx71")
}, {
"duration": 1.0,
"texture": ExtResource("29_t2wgn")
}, {
"duration": 1.0,
"texture": ExtResource("30_6i383")
}, {
"duration": 1.0,
"texture": ExtResource("31_uw5q0")
}, {
"duration": 1.0,
"texture": ExtResource("32_pffwl")
}],
"loop": false,
"name": &"default",
"speed": 24.0
}]

[node name="DesertKiller" type="Node2D"]
script = ExtResource("1_05uxk")

[node name="KillingAnim" type="AnimatedSprite2D" parent="."]
position = Vector2(24, -12)
sprite_frames = SubResource("SpriteFrames_2powr")
frame = 31
frame_progress = 1.0
speed_scale = 2.0

[node name="KillingAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("34_ywhb2")
volume_db = -4.0
bus = &"Sound"

[connection signal="animation_finished" from="KillingAnim" to="." method="_on_killing_anim_animation_finished"]
